# ESP32Audio

./: .gitignore  Audio.h  AudioStream.cpp  AudioStream.h  CMakeLists.txt  README.md  component.mk  effect_compressor.h  effect_delay.cpp  effect_delay.h  effect_envelope.cpp  effect_envelope.h  effect_multiply.h  input_i2s.cpp  input_i2s.h  mixer.cpp  mixer.h  output_dac.cpp  output_dac.h  output_i2s.cpp  output_i2s.h  record_psram.cpp  record_psram.h  synth_sine.h
Examples/MicSampler/: MicSampler.ino  cpuDisplay.h  cpuStats.h
Examples/Sine/: Makefile  README.md
Examples/SinesIntoMixerIntoEnvelope/: SinesIntoMixerIntoEnvelope.ino
eexamples/Sine/: CMakeLists.txt
examples/Sine/main/: main.cpp
examples/SineEnvelope/: Makefile
examples/SineEnvelope/main/: main.cpp
gui/: index.html
include/: Audio.h  AudioStream.h  CpuDisplay.h  CpuStats.h  control_afs22.h  control_i2s.h  control_pcm3060.h  effect_calibration.h  effect_compressor.h  effect_delay.h  effect_envelope.h  effect_multiply.h  input_a2dp.h  input_i2s.h  mixer.h  output_i2s.h  play_sdmmc_wav.h  record_flash.h  record_psram.h  synth_dc.h  synth_sine.h
lib/statistics/: CpuDisplay.h
lib/tinywav/: tinywav.h
src/: AudioStream.cpp  control_afs22.cpp  control_i2s.cpp  control_pcm3060.cpp  data_waveforms.c  effect_calibration.cpp  effect_compressor.cpp  effect_delay.cpp  effect_envelope.cpp  effect_multiply.cpp  input_a2dp.cpp  input_i2s.cpp  mixer.cpp  output_i2s.cpp  play_sdmmc_wav.cpp  record_flash.cpp  record_psram.cpp  synth_dc.cpp  synth_sine.cpp
src/lib/a2dp/: bt_app_av.c  bt_app_av.h  (+2 more)
